k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: originhub-frontend-ingress
  namespace: originhub-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <your host name here>
      secretName: frontend-tls
  rules:
    - host: <your host name here>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <your service name here>
                port:
                  number: 80
